# homology-cliff

./: .gitattributes  .gitignore  .zenodo.json  ACKNOWLEDGMENTS.md  BENCHMARK.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_CARD.md  FAQ.md  LICENSE-code.txt  LICENSE-papers.txt  MANIFEST.sha256.json  MODEL_CARD.md  PROBLEMS.md  README.md  REFEREES.md  RELEASE_AUDIT_v1.4.5.md  SECURITY.md  _push.ps1  codemeta.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  data_issue.md  reproducibility_failure.md
.github/workflows/: manifest.yml  smoke.yml  tests.yml
code/analyses/: fetch_pfam_v3.py  run_adversarial_phase1.py  run_calibration.py  run_cross_family_partition.py  run_mapper.py  run_mapper_augmentation.py  v3_aggregate.py
code/colab_notebook/: plm_benchmark.ipynb
code/harnesses/: run_cascade.py  run_cliff.py  run_cliff_fullnull.py  run_fisher.py
code/kaggle_notebooks/: adv_cell1_setup.py  adv_cell2_edits.py  adv_cell3_next.py  cell1_setup.py  cell2_prot_t5.py  cell3_saprot.py  cell4_esm2_t33.py
data/annotations/: proteins_25k_pfam.json
data/embeddings/: embeddings_t12.npy  embeddings_t30.npy  embeddings_t6.npy
data/prereg/: PRE_REGISTRATION.md  PRE_REGISTRATION_FISHER_CLIFF_v1.md  PRE_REGISTRATION_HOMOLOGY_CLIFF_ADDENDUM_FULLNULL.md  PRE_REGISTRATION_HOMOLOGY_CLIFF_v1.md  PRE_REGISTRATION_STRATIFIED_CASCADE_v1.md  PRE_REGISTRATION_v2.md  (+3 more)
deployment_example/: README.md  deploy_cliff_rescue.py
reproducibility/: GPU_EXECUTION_GUIDE.md  PROTOCOL.md
scripts/: build_summary_figure.py
tests/: test_cell_schema.py
(+9391 files in other folders)
